--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,196 +72,11 @@ jobs:
 
   # Validate site
   validate-site:
-    needs: deploy
-    runs-on: ubuntu-latest
+    needs: build
     steps:
-      - uses: actions/checkout@v2
-      - name: Sleep for 60 seconds
-        uses: jakejarvis/wait-action@master
+      - name: Audit URLs using Lighthouse
+        uses: treosh/lighthouse-ci-action@v9
         with:
-          time: "60s"
-
-      - name: Lighthouse CI Action
-        uses: treosh/lighthouse-ci-action@v2
-        with:
-          #This list of urls can be generated dervived from the sitemap.xml
-          #cat ./build/sitemap.xml | grep https:// | sed 's/<.*>\(.*\)<\/.*>/\1/' | sed 's/https:\/\/localhost:4000\//$SITE_URL\//g' | sort
-          urls: |
-            $SITE_URL/
-            $SITE_URL/careers/join/
-            $SITE_URL/company/about/
-            $SITE_URL/company/policies/
-            $SITE_URL/company/policies/code-of-conduct/
-            $SITE_URL/company/policies/intellectual-property/
-            $SITE_URL/company/policies/linking/
-            $SITE_URL/company/policies/open-source/
-            $SITE_URL/company/policies/privacy/
-            $SITE_URL/company/policies/vulnerability-disclosure/
-            $SITE_URL/company/press/
-            $SITE_URL/company/press/page/2/
-            $SITE_URL/company/press/page/3/
-            $SITE_URL/company/press/page/4/
-            $SITE_URL/company/press/page/5/
-            $SITE_URL/company/press/page/6/
-            $SITE_URL/company/values/
-            $SITE_URL/connect/contact/
-            $SITE_URL/connect/contracting/
-            $SITE_URL/thankyou.html
-            $SITE_URL/thoughts/blog/
-            $SITE_URL/thoughts/blog/a-human-centered-approach-to-rebuilding-the-us-refugee-admission-program
-            $SITE_URL/thoughts/blog/a-smarter-way-to-build-smart-cities/
-            $SITE_URL/thoughts/blog/achieve-devops-transformation-with-skylight-and-dora/
-            $SITE_URL/thoughts/blog/author/chris-cairns/
-            $SITE_URL/thoughts/blog/case-management-a-study-in-non-traditional-economics-for-government/
-            $SITE_URL/thoughts/blog/containers-thinking-inside-the-box/
-            $SITE_URL/thoughts/blog/five-former-presidential-innovation-fellows-and-18f-cofounders-join-skylight/
-            $SITE_URL/thoughts/blog/geoff-mulligan-engineering-open-and-interoperable-iot-solutions/
-            $SITE_URL/thoughts/blog/gianna-buda-launching-a-civic-tech-career/
-            $SITE_URL/thoughts/blog/how-to-rescue-failing-programs/
-            $SITE_URL/thoughts/blog/jordan-guinn-making-the-impact-of-technology-real/
-            $SITE_URL/thoughts/blog/josh-dorothy-engineering-great-developer-experiences-through-devops/
-            $SITE_URL/thoughts/blog/key-trends-in-mobile-app-development-part-1-the-trends/
-            $SITE_URL/thoughts/blog/key-trends-in-mobile-app-development-part-2-making-sense-of-the-trends/
-            $SITE_URL/thoughts/blog/kin-lane-harnessing-the-connective-power-of-apis/
-            $SITE_URL/thoughts/blog/lean-software-development-part-1-the-three-instances-of-lean
-            $SITE_URL/thoughts/blog/learning-techniques-for-public-servants/
-            $SITE_URL/thoughts/blog/leveraging-collective-insights-for-early-care-and-education-information-systems/
-            $SITE_URL/thoughts/blog/maximizing-the-power-of-apis-balancing-freedom-and-control/
-            $SITE_URL/thoughts/blog/maya-benari-accelerating-the-development-of-high-quality-products/
-            $SITE_URL/thoughts/blog/meet-the-10-newest-members-of-the-skylight-team/
-            $SITE_URL/thoughts/blog/new-bug-bounty-program-solution-to-secure-government-digital-services/
-            $SITE_URL/thoughts/blog/nick-bristow-making-government-digital-services-more-accessible/
-            $SITE_URL/thoughts/blog/our-winning-devops-transformation-consulting-proposal/
-            $SITE_URL/thoughts/blog/page/2/
-            $SITE_URL/thoughts/blog/page/3/
-            $SITE_URL/thoughts/blog/principles-for-a-federal-cio-led-digital-transformation/
-            $SITE_URL/thoughts/blog/public-domain-procurement/
-            $SITE_URL/thoughts/blog/puerto-rico-a-disaster-lab-three-research-proposals/
-            $SITE_URL/thoughts/blog/quick-wins-for-legacy-systems-through-api-enablement/
-            $SITE_URL/thoughts/blog/reactions-to-our-agile-share-in-savings-model/
-            $SITE_URL/thoughts/blog/software-badness-quantified/
-            $SITE_URL/thoughts/blog/story-of-a-darpa-proposal/
-            $SITE_URL/thoughts/blog/supplement-your-team-with-specific-digital-expertise-through-our-microconsulting-services/
-            $SITE_URL/thoughts/blog/tag/design/
-            $SITE_URL/thoughts/blog/the-search-for-mentor-protege-relationships/
-            $SITE_URL/thoughts/blog/thoughts-on-the-use-of-technical-challenges-in-government-procurements/
-            $SITE_URL/thoughts/blog/unsolicited-proposal-for-a-microconsulting-services-marketplace-platform/
-            $SITE_URL/thoughts/blog/why-government-it-professionals-need-to-do-what-the-cool-kids-are-doing/
-            $SITE_URL/thoughts/blog/why-plain-language-policies-matter-telehealth-billing-and-coding-during-a-pandemic/
-            $SITE_URL/thoughts/talks/speaker/chris-cairns/
-            $SITE_URL/work/experience/
-            $SITE_URL/work/experience/18f-consulting/
-            $SITE_URL/work/experience/acme-devops-transformation/
-            $SITE_URL/work/experience/adopta-agency/
-            $SITE_URL/work/experience/agile-acquisition-framework/
-            $SITE_URL/work/experience/agile-delivery-services-marketplace/
-            $SITE_URL/work/experience/ca-hhs-agile-training/
-            $SITE_URL/work/experience/carrot/
-            $SITE_URL/work/experience/cdc-simplereport/
-            $SITE_URL/work/experience/cms-iqies/
-            $SITE_URL/work/experience/cms-macbis-transformation/
-            $SITE_URL/work/experience/ct-ece-reporter/
-            $SITE_URL/work/experience/ct-families-experiencing-homelessness/
-            $SITE_URL/work/experience/ct-oec-care4kids-auto-notifier/
-            $SITE_URL/work/experience/ct-oec-digital-transformation/
-            $SITE_URL/work/experience/ct-oec-website-redesign/
-            $SITE_URL/work/experience/ctgov-analytics/
-            $SITE_URL/work/experience/digital-acquisition-accelerator/
-            $SITE_URL/work/experience/digital-transformation-framework/
-            $SITE_URL/work/experience/dol-legacy-system-modernization/
-            $SITE_URL/work/experience/epa-sdwis-advice/
-            $SITE_URL/work/experience/goc-nextgen-hr-and-pay-system-agile-procurement/
-            $SITE_URL/work/experience/hhs-telehealth-website/
-            $SITE_URL/work/experience/ncoc-refugee-admissions-research/
-            $SITE_URL/work/experience/sba-ascent/
-            $SITE_URL/work/experience/space-force-web-portal/
-            $SITE_URL/work/experience/ssa-agile-microsprints/
-            $SITE_URL/work/experience/talkto/
-            $SITE_URL/work/experience/tsa-cloud-adoption/
-            $SITE_URL/work/experience/united-nations-accessibility-support/
-            $SITE_URL/work/experience/us-navy-protosketching/
-            $SITE_URL/work/experience/usaf-arms/
-            $SITE_URL/work/experience/usaf-bespin-design-system/
-            $SITE_URL/work/experience/usaf-gearfit/
-            $SITE_URL/work/experience/usaf-jocas/
-            $SITE_URL/work/experience/usaf-service-design-capacity-building/
-            $SITE_URL/work/experience/uscis-everify-modernization/
-            $SITE_URL/work/experience/usda-recreation-information-database-api/
-            $SITE_URL/work/experience/va-api-developer-outreach/
-            $SITE_URL/work/experience/va-api-governance-research/
-            $SITE_URL/work/experience/va-api-landscape-analysis/
-            $SITE_URL/work/experience/va-api-scorecard-mvp/
-            $SITE_URL/work/experience/va-diffusion-marketplace/
-            $SITE_URL/work/experience/va-mobile-product-strategy/
-            $SITE_URL/work/services/
-            $SITE_URL/work/services/service-design/
-            $SITE_URL/work/services/training/
-            $SITE_URL/work/services/training/ditap-executive/
-            $SITE_URL/work/services/training/ditap/
-            $SITE_URL/work/team-member/chris-cairns/
-            $SITE_URL/work/toolkits/
-            $SITE_URL/work/toolkits/accessibility-guide/
-            $SITE_URL/work/toolkits/accessibility-guide/alternative-versions/
-            $SITE_URL/work/toolkits/accessibility-guide/checklist/
-            $SITE_URL/work/toolkits/accessibility-guide/css/
-            $SITE_URL/work/toolkits/accessibility-guide/flashing/
-            $SITE_URL/work/toolkits/accessibility-guide/headings/
-            $SITE_URL/work/toolkits/accessibility-guide/hidden-content/
-            $SITE_URL/work/toolkits/accessibility-guide/iframeform/
-            $SITE_URL/work/toolkits/accessibility-guide/keyboard/
-            $SITE_URL/work/toolkits/accessibility-guide/landmarks/
-            $SITE_URL/work/toolkits/accessibility-guide/language/
-            $SITE_URL/work/toolkits/accessibility-guide/links/
-            $SITE_URL/work/toolkits/accessibility-guide/multimedia/
-            $SITE_URL/work/toolkits/accessibility-guide/page-titles/
-            $SITE_URL/work/toolkits/accessibility-guide/plugins/
-            $SITE_URL/work/toolkits/accessibility-guide/tables/
-            $SITE_URL/work/toolkits/accessibility-guide/timeouts/
-            $SITE_URL/work/toolkits/accessibility-guide/tools/
-            $SITE_URL/work/toolkits/accessibility-guide/writing-guide/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-a-case-studies/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-b-key-concepts/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-c-templates/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-d-tep-rating-system-examples/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-e-design-challenge-examples/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-f-procurement-options-analysis-examples/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/appendix-g-statement-of-objectives-examples/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/guiding-principles-of-an-agile-procurement/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/managing-an-agile-project/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/phases-of-an-agile-procurement/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/standing-up-a-team-to-guide-the-procurement-process/
-            $SITE_URL/work/toolkits/agile-procurement-playbook/what-is-agile-procurement/
-            $SITE_URL/work/toolkits/data-sharing-playbook/
-            $SITE_URL/work/toolkits/data-sharing-playbook/appendix-a-setting-smart-goals/
-            $SITE_URL/work/toolkits/data-sharing-playbook/appendix-b-linking-datasets/
-            $SITE_URL/work/toolkits/data-sharing-playbook/enabling-data-sharing/
-            $SITE_URL/work/toolkits/data-sharing-playbook/preparing-a-successful-data-request/
-            $SITE_URL/work/toolkits/data-sharing-playbook/responding-to-data-requests/
-            $SITE_URL/work/toolkits/data-sharing-playbook/safeguarding-data/
-            $SITE_URL/work/toolkits/data-sharing-playbook/transferring-data/
-            $SITE_URL/work/toolkits/digital-talent-management/
-            $SITE_URL/work/toolkits/digital-talent-management/appendix-a-sample-interview-questions/
-            $SITE_URL/work/toolkits/digital-talent-management/building-a-digital-team
-            $SITE_URL/work/toolkits/digital-talent-management/building-a-modern-team-culture/
-            $SITE_URL/work/toolkits/digital-talent-management/building-a-movement-and-a-presence/
-            $SITE_URL/work/toolkits/digital-talent-management/creating-a-productive-and-collaborative-work-environment/
-            $SITE_URL/work/toolkits/digital-talent-management/developing-a-digital-talent-strategy/
-            $SITE_URL/work/toolkits/digital-talent-management/ensuring-happy-and-engaged-employees/
-            $SITE_URL/work/toolkits/digital-talent-management/guiding-your-digital-transformation/
-            $SITE_URL/work/toolkits/digital-talent-management/hiring/
-            $SITE_URL/work/toolkits/digital-talent-management/how-we-wrote-this-guide/
-            $SITE_URL/work/toolkits/digital-talent-management/keeping-skills-and-ideas-fresh/
-            $SITE_URL/work/toolkits/digital-talent-management/leading-and-managing-a-digital-team/
-            $SITE_URL/work/toolkits/digital-talent-management/onboarding/
-            $SITE_URL/work/toolkits/digital-talent-management/recruiting/
-            $SITE_URL/work/toolkits/digital-talent-management/understanding-your-talent-gaps/
-            $SITE_URL/work/toolkits/managing-technical-debt/
-            $SITE_URL/work/toolkits/managing-technical-debt/managing-technical-debt/
-            $SITE_URL/work/toolkits/managing-technical-debt/preventing-technical-debt/
-            $SITE_URL/work/toolkits/managing-technical-debt/resources/
-            $SITE_URL/work/toolkits/managing-technical-debt/what-is-technical-debt/
-          uploadArtifacts: false
-          configPath: ./lighthouse/lighthouserc.yml
-        env:
-          SITE_URL: ${{ secrets.PRODUCTION_URL }}
+          configPath: './lighthouserc.yml'
+          uploadArtifacts: false # save results as an action artifacts
+          temporaryPublicStorage: false # upload lighthouse report to the temporary storage
