--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,12 @@ jobs:
           mkdir ./build
           tar -xf artifact.tar -C ./build
       - name: debug
-        run: ls -la
+        run: | 
+          ls -la
+          cd ./build
+          ls -la
+          cd ./blog
+          ls -la
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
         with:
