fix amrita illustration bug!

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2975,8 +2975,8 @@
   full_name: Amrita Kaur Bhatti
   short_name: A. Bhatti
   profile_path: /company/about/#amrita-bhatti
-  image: /img/people/amrita-bhatti.jpg
-  image_description: Photo of Amrita Kaur Bhatti
+  image: /img/people/amrita-bhatti.png
+  image_description: Illustration of Amrita Kaur Bhatti
   position: Staff Product Manager
   bio: >
     Amrita's a product manager who enjoys working with people and technology to create meaningful solutions. Previously, she was a product manager at McMaster-Carr and has experience as a software engineer. She lives in California.
