--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3109,7 +3109,7 @@
   full_name: Kelli Mason
   short_name: K. Mason
   profile_path: /company/about/#kelli-mason
-  image: /img/people/kelli-mason.jpg
+  image: /img/people/kelli-mason.png
   image_description: Photo of Kelli Mason
   position: Head of People Operations
   bio: >
