--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2542,7 +2542,7 @@
   position: Staff Data Engineer
   bio: >
     Bryan's a data engineer with a drive to work on projects that have meaningful impact. He previously worked at Meta and has built data solutions to help address issues of money laundering, financial fraud, gun violence, and disinformation campaigns. Bryan lives in Washington.
-  active: true
+  active: false
   socials:
     - name: Twitter
       link: https://twitter.com/tblznbits
