--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1696,7 +1696,7 @@
     Jamie's a product manager with a passion for good, clean product experiences.
     She excels at leading and managing cross-functional teams across the entire product
     lifecycle. Jamie lives in Washington DC.
-  active: true
+  active: false
   order: 440
   socials:
     - name: LinkedIn
