--- a/_data/ditap.yml
+++ b/_data/ditap.yml
@@ -2,8 +2,8 @@ ditap:
   primary_registration_link: https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-169731053149
   info:
     - cohort: 4
-      run_date: Nov 6, 2023 to Apr 24, 2024
-      description: In-person classroom sessions will be held on Nov 6–8, Jan 15–17, Mar 4–6, and Apr 22–24. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.
+      run_date: Nov 4, 2024 to Apr 23, 2025
+      description: In-person classroom sessions will be held on Nov 4–6, Jan 13–16, Mar 3–5, and Apr 21–23.
       location: Online + Washington DC
       instructors: Chris Cairns, Dan Levenson, Robert Read, and Leslie Garner Franklin
       cost: $3,500
@@ -14,7 +14,7 @@ executive:
   primary_registration_link: https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308
   info:
     - class: 2
-      run_date: Thu, Nov 16, 2023, 9:00 am – 5:00 pm ET
+      run_date: Thu, Nov 7, 2024, 9:00 am – 5:00 pm ET
       description:
       location: Online
       instructors: Chris Cairns, Dan Levenson, Robert Read, and Leslie Garner Franklin
