matching Angela The img link file
Updating angela the's img link from jpg to png to match the file uploaded

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3213,7 +3213,7 @@
   full_name: Angela The
   short_name: A. The
   profile_path: /company/about/#angela-the
-  image: /img/people/angela-the.jpg
+  image: /img/people/angela-the.png
   image_description: Photo of Angela The
   position: Software Engineer Apprentice 
   bio: >
