updating angela the personal site

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3233,6 +3233,6 @@
       link_description: Angela's GitHub Account
       fa_icon_name: github
     - name: Personal Website
-      link: https://linkedin.com/in/angelathe
+      link: https://www.angelathe.com/
       link_description: Angela's Personal Website
       fa_icon_name: home
